# my-own-whiteboard

./: .replit  Dockerfile  Pasted--Distributed-Systems-Assignment-Private-Cloud-Whiteboard-Application-You-have-to-design-and-docum-1733666263317.txt  Pasted-Loading-existing-drawings-socket-js-9-Connected-to-server-whiteboard-js-70-Received-drawings-dr-1733616696134.txt  README.md  app.py  cache_circuit_breaker.py  cache_manager.py  docker-compose.yml  models.py  pyproject.toml
instance/: whiteboard.db
kubernetes/: deployment.yaml  service.yaml
static/css/: styles.css
static/js/: socket.js  whiteboard.js
templates/: index.html  room.html
