[project]
name = "repl-nix-whiteboardkubedeploy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-caching>=2.3.0",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "redis",
    "flask-redis",
]
